Add repair rules, metadata & Campaign fields
Introduce configurable repair multipliers and related metadata across backend and frontend. Added repair multiplier columns to DB schema and SchemaGenerator; extended Campaign entity with multiplier fields and a transient RepairRules object. Implemented CampaignService records for RepairRules and CampaignMetadata, mapping from input and defaulting to RulesConstants; updated proposal/campaign generation to apply rules. Exposed repairRules, unit types, tech bases and statuses in GraphQL schema and resolvers; updated controller and tests accordingly. Improved TypeUtils conversions and added new RulesConstants for defaults and asset taxonomy. Also added/updated frontend components to surface rules and UI changes.